--- a/assets/stylus/components/hero.styl
+++ b/assets/stylus/components/hero.styl
@@ -12,7 +12,7 @@
   .custom
     padding 25px 10px 25px 0
     @media (max-width 540px)
-      padding 55px 10px 55px 0
+      padding 65px 10px 75px 0
 #hero-section-2
   .sm-bordered
     @media (max-width 1024px)
@@ -24,5 +24,6 @@
     border: 4px solid white;
     border-radius: 100%;
     @media (max-width 1024px)
-      width: 300px;
-      height: 300px;
+      width: 400px;
+      height: 400px;
+      margin-top 3px
